src/goamazon/slurm_outputs/aero_size_distb_v3.txt
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 114
    uaf50_nconcs.append(get_uaf50_nconc(smpsvars, \
    ^
IndentationError: unexpected indent
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 170
    %ax.plot(uhsas_diams*1.e9, \
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 188, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 39, in main
    get_smps_spectra_and_times(smpsvars)
NameError: name 'get_smps_spectra_and_times' is not defined
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 188, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 39, in main
    get_smps_spectra_and_times_and_uaf50_nconcs(smpsvars)
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 114, in get_smps_spectra_and_times_and_uaf50_nconcs
    uaf50_nconcs.append(get_uaf50_nconc(smpsvars, \
NameError: name 'smpsvars' is not defined
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 188, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 39, in main
    get_smps_spectra_and_times_and_uaf50_nconcs(smpsvars)
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 116, in get_smps_spectra_and_times_and_uaf50_nconcs
    None))
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 127, in get_uaf50_nconc
    smps_dlogDp[0:42]*dNlogDp[start_t_ind:, 0:42], \
NameError: name 'smps_dlogDp' is not defined
  File "/global/home/users/kalatimer/proj/20supersat/src/goama/aero_size_distb_figsrc.py", line 135
    axis=0)
       ^
SyntaxError: invalid syntax
